align fix

--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -364,6 +364,7 @@ ol ol {
   &.page {
     text-align: justify;
     text-align-last: left;
+    align-items: flex-start;
   }
 }
 
